aligning dates and content also fixed spacing on the key details bar

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -384,7 +384,7 @@ $govuk-assets-path: '/govuk/assets/';
 }
 
 .new-key-details-bar {
-  width: 1200px;
+  width: 1220px;
 }
 
 .new-key-details-bar .new-key-details-bar__key-details {
@@ -541,3 +541,4 @@ $govuk-assets-path: '/govuk/assets/';
     box-sizing: border-box;
     max-width: 850px;
 }
+
